--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<doctype!html>
-<head></head>
-<body></body>
+<!doctype html>
+<meta charset="utf-8">
+<link rel="icon" type="image/png"  href="foto/cv.png">
+<title>Fabricio Aguirre Curricullum Vitae Experiencia y Referencias</title>
+<header></header>
+<head>	
+</head>
+<body>
+ <center>
+	 <div>...</div> </center>
+</body>
 </html>
