--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
  <center><div>
-	<a class="link-1" href="https://mascotacool.github.io/anexos" target="_blank" rel="nofollow">
+	<a class="link-1" href="https://docs.google.com/document/d/1KoV7MXt6aYhji0dAfd2S36QLYGxBWpcx4SrT0-FxZlU/edit?usp=sharing" target="_blank" rel="nofollow">
 	<h5>Ver Cursos Realizados en PDF</h5></a>
 	</div></center>
 </body>
