--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</div>
 	 <div>
 	<a class="link-1" href="https://docs.google.com/document/d/1KoV7MXt6aYhji0dAfd2S36QLYGxBWpcx4SrT0-FxZlU/edit?usp=sharing" target="_blank" rel="nofollow">
-	<h5>Ver Cursos Realizados en PDF</h5></a>
+	<h5>VER  Experiencia y Referencias Personales</h5></a>
 	</div></center>
 </body>
 </html>
